--- a/colab/Tox21Gcn.ipynb
+++ b/colab/Tox21Gcn.ipynb
@@ -79,13 +79,42 @@
       "source": [
         "import gnn\n",
         "import nmgnn\n",
-        "import convmol_dataloader as dl"
+        "import convmol_dataloader as dl\n",
+        "import metrics"
       ],
       "metadata": {
-        "id": "JDLJUDUaaFD_"
+        "id": "JDLJUDUaaFD_",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 373
+        },
+        "outputId": "88a4b7e1-342a-444d-d967-6c1c2e0f45eb"
       },
-      "execution_count": 4,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-8b581a48a8c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mgnn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnmgnn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mconvmol_dataloader\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdl\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmetrics\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'gnn'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -466,17 +495,17 @@
     {
       "cell_type": "code",
       "source": [
-        "predictions=model.predict([test_features, test_adj])"
+        "metrics.get_multilabel_stats(model, [test_features, test_adj], test_labels)"
       ],
       "metadata": {
-        "id": "0AF3hPrgDKLE",
-        "outputId": "31dcbcdc-85da-4124-b994-d479f7c58e9c",
+        "id": "TvG79JUpL9D2",
+        "outputId": "29e40651-9a12-4233-c55c-2fe3ba61ef58",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 171
         }
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "error",
@@ -485,8 +514,8 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-b321557bd528>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpredictions\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtest_features\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_adj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
+            "\u001b[0;32m<ipython-input-3-e71191f4f8d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_multilabel_stats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mtest_features\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_adj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'metrics' is not defined"
           ]
         }
       ]
@@ -498,7 +527,7 @@
       "collapsed_sections": [],
       "name": "Tox 21",
       "provenance": [],
-      "authorship_tag": "ABX9TyNqruB54ig7uXqsjt8BHoga"
+      "authorship_tag": "ABX9TyMUbf0cysIw8QCo2m67ID8w"
     },
     "gpuClass": "standard",
     "kernelspec": {
